--- a/css/style.css
+++ b/css/style.css
@@ -144,9 +144,9 @@ input:checked + .slider:before {
 }
 .side-menu .ul-side-menu .li-side-menu .link-side-menu {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   width: 100%;
   height: 94px;
   position: relative;
@@ -155,7 +155,7 @@ input:checked + .slider:before {
   background-repeat: no-repeat;
   background-position: center 15px;
 }
-.side-menu .ul-side-menu .li-side-menu:nth-child(1) .link-side-menu {
+/* .side-menu .ul-side-menu .li-side-menu:nth-child(1) .link-side-menu {
   background-image: url("../img/icon_menu/1.png");
 }
 .side-menu .ul-side-menu .li-side-menu:nth-child(1) .link-side-menu.active,
@@ -203,7 +203,7 @@ input:checked + .slider:before {
 .side-menu .ul-side-menu .li-side-menu:nth-child(7) .link-side-menu.active,
 .side-menu .ul-side-menu .li-side-menu:nth-child(7) .link-side-menu:hover {
   background-image: url("../img/icon_menu/7_active.png");
-}
+} */
 .side-menu .ul-side-menu .li-side-menu .link-side-menu p {
   width: 100%;
   text-align: center;
