--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,18 @@ input:checked + .slider:before {
   background-repeat: no-repeat;
   background-position: center 15px;
 }
+.side-menu .ul-side-menu .li-side-menu .link-side-menu .svg {
+  width: 90px;
+  height: 40px;
+  transform: scale(1.2);
+}
+.side-menu .ul-side-menu .li-side-menu .link-side-menu .svg path{
+  fill: #ffffff!important;
+}
+.side-menu .ul-side-menu .li-side-menu .link-side-menu:hover .svg path, .side-menu .ul-side-menu .li-side-menu .link-side-menu.active .svg path {
+  fill: #ffcc00!important;
+}
+
 /* .side-menu .ul-side-menu .li-side-menu:nth-child(1) .link-side-menu {
   background-image: url("../img/icon_menu/1.png");
 }
@@ -204,6 +216,7 @@ input:checked + .slider:before {
 .side-menu .ul-side-menu .li-side-menu:nth-child(7) .link-side-menu:hover {
   background-image: url("../img/icon_menu/7_active.png");
 } */
+
 .side-menu .ul-side-menu .li-side-menu .link-side-menu p {
   width: 100%;
   text-align: center;
